--- a/LottoProgram/packages.config
+++ b/LottoProgram/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AngleSharp" version="0.14.0" targetFramework="net472" />
+  <package id="ControlzEx" version="4.4.0" targetFramework="net472" />
+  <package id="MahApps.Metro" version="2.4.9" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="NRobotsCore" version="1.1.3" targetFramework="net472" />
   <package id="Serilog" version="2.10.0" targetFramework="net472" />
