--- a/SimpleGallag/SimpleGallag.csproj
+++ b/SimpleGallag/SimpleGallag.csproj
@@ -55,7 +55,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>plane.ico</ApplicationIcon>
+    <ApplicationIcon>TankIcon2.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ControlzEx, Version=4.0.0.0, Culture=neutral, PublicKeyToken=69f1c32f803d307e, processorArchitecture=MSIL">
@@ -77,6 +77,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -108,12 +109,11 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Converters\BooleanToVisibilityInvertConverter.cs" />
     <Compile Include="Converters\BooleanToVisibilityConverter.cs" />
     <Compile Include="Converters\IntToBrushConverter.cs" />
-    <Compile Include="Models\AttackThread.cs" />
     <Compile Include="Models\Laser.cs" />
     <Compile Include="Models\Rock.cs" />
-    <Compile Include="Models\RockDropThread.cs" />
     <Compile Include="Models\Tank.cs" />
     <Compile Include="SystemConfig.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
@@ -157,6 +157,36 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="plane.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Tank.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Rock3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Rock2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Rock1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Rock5.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Rock4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\sky.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="TankIcon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="TankIcon2.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Tank2.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
